Bug fix: header not centered in firefox

--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -5,7 +5,6 @@
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  align-items: center;
 }
 
 .app__content {
@@ -13,6 +12,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  align-self: center;
 }
 
 
